# RailRL_v2

./: .gitignore  README.md  pyproject.toml
data/domain/: Training_Plan_2022.docx
data/raw/: route_to_tc_all.csv
data/reference/: Derby_info.csv  TRT1.DY2_2.SOP  derby_info_mapping.csv  platform_end_signals.csv  platform_tc_map.csv
docs/: 4_7_2d_loader_design_DRAFT.md  CHANGELOG.md  IMPLEMENTATION_LOG.md  LEAK_AUDIT.md  NEW_CONVERSATION_PROMPT.md  PROJECT_HANDOFF.docx  RESULTS_SUMMARY.md  TOOL_TRAPS.md  _build_handoff.py  manuscript_academic_paper_draft_v1.docx  manuscript_academic_paper_draft_v1.md  manuscript_draft_v0.docx  manuscript_draft_v0.md  phase2_feature_spec.md
docs/handoff/: Phase1_1_Inventory_Report.docx  Research_Proposal_Derby_RL_v3.docx
docs/spec/: 01_data_pipeline.md  02_mdp_formulation.md  03_model_architecture.md  04_training_protocol.md  05_xai_and_eval.md
outputs/_legacy_v1_binary/: README.md
outputs/analyses/: conflict_summary.json  non_standard_trainids_summary.json  route_class_summary.json
outputs/decision_points/: candidate_coverage.json  decision_points_candidates_summary.json  decision_points_v2_summary.json
outputs/decisions/: decision_events_summary.json  pr_timing_audit.json  pr_timing_audit.md
outputs/eval/: aggregate_3seed.json  aggregate_3seed.md  baseline_accuracy_table.json  bc_seed42_test_metrics.json  cql_seed42_best_test_metrics.json  cql_seed43_best_test_metrics.json  cql_seed44_best_test_metrics.json  iql_seed42_test_metrics.json  l1_saliency.json  l1_saliency.md  l2_explanations.json  l2_explanations.md  l4_compliance_seed42.json  l4_compliance_seed43.json  l4_compliance_seed44.json  l5_irl_weights.json  ope_fqe_decompose_seed42.json  ope_fqe_decompose_seed43.json  ope_fqe_decompose_seed44.json  ope_fqe_seed42_delay.json  ope_fqe_seed42_total.json  ope_fqe_seed43_total.json  ope_fqe_seed44_total.json  selective_override_seed42.json  selective_override_seed43.json  selective_override_seed44.json
outputs/infrastructure/: infrastructure_graph.json
outputs/inventory/: movements_inventory.json  td_inventory.json
outputs/passes/: pass_assignments_summary.json
outputs/rewards/: calibration.json  calibration_summary.md  decision_rewards_summary.json  decision_rewards_v2_summary.json  pr_outcomes_summary.json  pr_outcomes_v2_summary.json  time_bucket_edges.json
outputs/rule_base/: destinations_to_map.md  rules.csv  rules_draft_batch1.md  rules_full_draft.md
src/railrl/: cli.py  (+5 more)
tests/: conftest.py  test_config.py  test_imports.py
(+197 files in other folders)
